--- a/main.css
+++ b/main.css
@@ -8,6 +8,32 @@ body {
     font-family: Poppins, Lato, Georgia, Times, 'Times New Roman', serif;
 }
 
+header .top-header{
+    margin: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header .top-header img{
+    width: 100px;
+}
+header .top-header input{
+    position: relative;
+}
+header .top-header span{
+    position: absolute;
+}
+header .top-header a{
+    margin: auto 10px;
+    border: 1px solid #000;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    color: #000;
+    font-size: 14px;
+}
+
 nav{
     display: flex;
     justify-content: space-between;
@@ -16,10 +42,7 @@ nav{
     background-color: rgb(81, 200, 255);
 
 }
- nav .logo{
-    display: flex;
-    margin: auto 10px;
- }
+
 nav ul {
     display: flex;
     justify-content: center;
@@ -40,20 +63,6 @@ nav ul a:hover{
 
 nav ul a li{
     list-style: none;
-}
-
-.login-btn {
-    margin: auto 10px;
-    
-}
-
-.login-btn a {
-    border: 1px solid #fff;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-    color: #fff;
 }
 
 h3 {
