--- a/main.css
+++ b/main.css
@@ -16,15 +16,23 @@ header .top-header{
 }
 header .top-header img{
     width: 100px;
-}
-header .top-header input{
-    position: relative;
-}
-header .top-header span{
-    position: absolute;
-}
-header .top-header a{
     margin: auto 10px;
+}
+header .top-header .search{
+    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    padding: 5px;
+    width: 30%;
+}
+header .top-header .search input{
+    border: none;
+    outline: none;
+    width: 100%;
+}
+
+header .top-header a{
     border: 1px solid #000;
     padding: 5px 10px;
     border-radius: 5px;
@@ -32,6 +40,7 @@ header .top-header a{
     text-decoration: none;
     color: #000;
     font-size: 14px;
+    margin: auto 10px;
 }
 
 nav{
