--- a/main.css
+++ b/main.css
@@ -49,38 +49,41 @@ header .top-header a:hover{
 }
 
 nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     margin-bottom: 10px;
     background-color: rgb(81, 200, 255);
 }
+nav .menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+}
 
-nav ul {
+nav .menu ul {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-nav ul a{
+nav .menu ul a{
     text-decoration: none;
     padding: 10px;
     margin: 0 5px;
     color: #000;
 } 
 
-nav ul a:hover{
+nav .menu ul a:hover{
     background-color: rgb(7, 147, 212);
     color: #fff;
 }
 
-nav ul a li{
+nav .menu ul a li{
     list-style: none;
 }
-nav span{
+nav .menu span{
     margin: auto 15px;
     cursor: pointer;
-    font-size: 20px;
 }
 
 section{
@@ -150,6 +153,7 @@ section{
 footer{
     background-color: rgb(9, 9, 45);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 30px 0;
@@ -159,6 +163,8 @@ footer .footer-wraper{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
     grid-template-rows: 1fr;
+    gap: 20px;
+    margin-bottom: 30px;
 }
 footer .footer-wraper .foot-menu{
 }
@@ -168,5 +174,26 @@ footer .footer-wraper .foot-menu ul a{
 }
 footer .footer-wraper .foot-menu ul a li{
     list-style: none;
+}
+footer .footer-wraper .foot-social{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    border: none solid none solid;
+}
+footer .footer-wraper .foot-social ul a{
+    color: #fff;
+    font-size: 24px;
+    margin-right: 20px;
+}
+footer .footer-wraper .foot-address {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+}
+footer .copy-right {
+    color: #b2b2b2;
+    font-size: 12px;
 }
 
