--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ header .top-header a:hover{
 }
 
 nav{
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     background-color: rgb(81, 200, 255);
 }
 nav .menu{
@@ -86,6 +86,17 @@ nav .menu span{
     cursor: pointer;
 }
 
+.top-img {
+    width: 80%;
+    margin: 0 auto 20px;
+    padding: 0 10px;
+
+}
+.top-img img {
+    width: 100%;
+    border-radius: 5px;
+}
+
 section{
     width: 80%;
     margin: 0 auto;
@@ -98,7 +109,7 @@ section{
     grid-row: auto;
 }
 .products-wraper .card {
-    margin: 10px 10px 30px;
+    margin: 10px;
     border: 1px solid #e7e7e7;
     border-radius: 5px;
 }
