--- a/main.css
+++ b/main.css
@@ -19,7 +19,8 @@ header .top-header img{
     margin: auto 10px;
 }
 header .top-header .search{
-    border: 1px solid #000;
+    box-shadow: 1px 1px 3px 1px #e7e7e7;
+    color: #b2b2b2;
     display: flex;
     align-items: center;
     border-radius: 20px;
@@ -30,6 +31,10 @@ header .top-header .search input{
     border: none;
     outline: none;
     width: 100%;
+}
+header .top-header .search span{
+    font-size: 20px;
+    cursor: pointer;
 }
 
 header .top-header a{
@@ -99,7 +104,18 @@ nav .menu span{
 
 section{
     width: 80%;
-    margin: 0 auto;
+    margin: 30px auto;
+}
+section .filter-pro{
+    padding: 0 10px;
+}
+section .filter-pro form select{
+    margin-right: 20px;
+    border-radius: 5px;
+    border-color: #b2b2b2;
+}
+section .filter-pro form label{
+    font-size: 14px;
 }
 
 .products-wraper {
