--- a/main.css
+++ b/main.css
@@ -97,6 +97,7 @@ nav .menu span{
     cursor: pointer;
 }
 
+/***************************** Main page styles **********************************/
 /* Big top images */
 .top-img {
     width: 80%;
@@ -237,7 +238,7 @@ footer .copy-right {
     font-size: 12px;
 }
 
-/* single page styles */
+/*********************** single page styles **************************/
 
 section .single-product-wraper {
     display: flex;
@@ -278,4 +279,8 @@ section .single-product-wraper .single-pro-details .pro-footer .add-to-care-btn{
 section .single-product-wraper .single-pro-details .pro-footer .add-to-care-btn:hover{
     background-color: rgb(11, 116, 116);
 }
+
+/******************************* Journal page styles ***************************/
+
+
 
