--- a/main.css
+++ b/main.css
@@ -281,6 +281,58 @@ section .single-product-wraper .single-pro-details .pro-footer .add-to-care-btn:
 }
 
 /******************************* Journal page styles ***************************/
+article{
+    background-color: #b2b2b2;
+    padding: 30px;
+}
+article h1{
+    color: #fff;
+    border: 1px solid #000;
+
+}
+article .main-content{
+    width: 80%;
+    margin: 30px auto;
+    display: flex;
+    gap: 30px;
+}
+article .main-content>div{
+    box-shadow: 1px 1px 10px 3px #e7e7e7;
+    background-color: #fff;
+    padding: 20px;
+    flex-basis: 100%;
+}
+article .main-content .improvement span{
+    font-size: 40px;
+    color: #fff;
+    background-color: rgb(0, 153, 255);
+    border-radius: 5px;
+    padding: 5px;
+}
+article .main-content .solutions span{
+    font-size: 40px;
+    color: #fff;
+    background-color: rgb(19, 206, 128);
+    border-radius: 5px;
+    padding: 5px;
+}
+article .main-content .errors span{
+    font-size: 40px;
+    color: #fff;
+    background-color: rgb(199, 5, 5);
+    border-radius: 5px;
+    padding: 5px;
+}
+article .main-content .project span{
+    font-size: 40px;
+    color: #fff;
+    background-color: rgb(209, 207, 58);
+    border-radius: 5px;
+    padding: 5px;
+}
+article .main-content>div>h2{
+    margin: 20px 0 5px;
+}
 
 
 
