--- a/main.css
+++ b/main.css
@@ -60,7 +60,6 @@ header .top-header a:hover{
 
 /* Navbar section */
 nav{
-    margin-bottom: 20px;
     background-color: rgb(81, 200, 255);
 }
 nav .menu{
@@ -104,7 +103,7 @@ nav .menu span.hamber{
 /* Big top images */
 .top-img {
     width: 80%;
-    margin: 0 auto 20px;
+    margin: 20px auto 20px;
     padding: 0 10px;
 
 }
