--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ header .top-header .search input{
     border: none;
     outline: none;
     width: 100%;
+    padding: 0 10px;
 }
 header .top-header .search span{
     font-size: 20px;
@@ -291,6 +292,30 @@ article{
     background-color: #b2b2b2;
     padding: 30px;
 }
+article .introduction{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    background-color: #f1c50e;
+    padding: 20px 0;
+    margin-bottom: 50px;
+}
+article .introduction img{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+article .introduction .intro-me{
+    max-width: 500px;
+    background-color: #f1c50e;
+    padding: 20px;
+    background-color: #fff;
+}
+article .introduction .intro-me p{
+    margin-top: 20px;
+}
 
 article h1{
     color: #fff;
@@ -348,6 +373,10 @@ article .ProjectScreen{
 }
 article .ProjectScreen h2{
     color: #fff;
+    width: fit-content;
+    margin: 40px 0 10px;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 article .ProjectScreen img{
     width: 100%;
@@ -356,17 +385,30 @@ article .ProjectScreen img{
 /******************************* Animations ********************************/
 
 @keyframes rotateIcons {
-    from {color: rgba(10, 117, 76, 0.719);}
-    to {color: yellow;}
-  }
-  
+    0% {background-color: #000;}
+    25% {background-color: rgb(49, 146, 54);}
+    50% {background-color: rgba(179, 9, 9, 0.719);}
+    100% {background-color: rgb(228, 130, 73);}
+}
 
-  .ProjectScreen h2 {
-    animation: rotateIcons 5s infinite;
-  }
+.ProjectScreen h2 {
+    animation: rotateIcons 4s infinite;
+}
 
 /****************************** Media query *******************************/
 
+@media screen and (max-width: 992px) {
+    article .introduction{
+        flex-direction: column;
+    }
+    article .introduction .intro-me{
+        margin-top: 30px;
+        max-width: 70%;
+    }
+    article .introduction .intro-me h2{
+        text-align: center;
+    }
+}
 @media screen and (max-width: 768px) {
     header .top-header .search {
         display: none;
