--- a/main.css
+++ b/main.css
@@ -86,8 +86,7 @@ nav .menu ul a{
 } 
 
 nav .menu ul a:hover{
-    background-color: rgb(7, 147, 212);
-    color: #fff;
+    color: #f1c50e;
 }
 
 nav .menu ul a li{
