--- a/main.css
+++ b/main.css
@@ -214,7 +214,7 @@ footer .footer-wraper .foot-menu ul a{
     list-style: none;
 }
 footer .footer-wraper .foot-menu ul a li:hover{
-    color: #b2b2b2;
+    color: #f1c50e;
 }
 footer .footer-wraper .foot-social{
     display: flex;
@@ -297,10 +297,10 @@ article .introduction{
     justify-content: space-evenly;
     align-items: center;
     width: 80%;
-    margin: 0 auto;
+    margin: 0 auto 50px;
     background-color: #f1c50e;
     padding: 20px 0;
-    margin-bottom: 50px;
+    border-radius: 5px;
 }
 article .introduction img{
     width: 250px;
@@ -309,16 +309,15 @@ article .introduction img{
 }
 article .introduction .intro-me{
     max-width: 500px;
-    background-color: #f1c50e;
     padding: 20px;
     background-color: #fff;
+    border-radius: 5px;
 }
 article .introduction .intro-me p{
     margin-top: 20px;
 }
-
 article h1{
-    color: #fff;
+    color: #333333;
     width: 80%;
     margin: 0 auto;
 }
@@ -334,6 +333,10 @@ article .main-content>div{
     background-color: #fff;
     padding: 20px;
     flex: 1 1 10em;
+    border-radius: 5px;
+}
+article .main-content>div>p{
+    font-size: 14px;
 }
 
 article .main-content .improvement span{
@@ -414,9 +417,6 @@ article .ProjectScreen img{
         display: none;
     }
     nav .menu ul {
-      display: none;
-    }
-    nav .menu span.basket {
       display: none;
     }
     nav .menu span.hamber {
