--- a/main.css
+++ b/main.css
@@ -13,35 +13,15 @@ body {
 
 /* header section */
 header .top-header{
-    margin: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 30px;
 }
 header .top-header img{
     width: 100px;
     margin: auto 10px;
 }
-header .top-header .search{
-    box-shadow: 1px 1px 3px 1px #e7e7e7;
-    color: #b2b2b2;
-    display: flex;
-    align-items: center;
-    border-radius: 20px;
-    padding: 5px;
-    width: 30%;
-}
-header .top-header .search input{
-    border: none;
-    outline: none;
-    width: 100%;
-    padding: 0 10px;
-}
-header .top-header .search span{
-    font-size: 20px;
-    cursor: pointer;
-}
-
 header .top-header a{
     border: 1px solid #000;
     padding: 5px 10px;
@@ -49,14 +29,13 @@ header .top-header a{
     cursor: pointer;
     text-decoration: none;
     color: #000;
-    font-size: 14px;
+    font-size: 16px;
     margin: auto 10px;
 }
 
 header .top-header a:hover{
-    /* color: #f1c50e; */
     background-color: #f7e28f;
-    /* border-color: #f1c50e; */
+    border-color: #f1c50e;
 }
 
 
@@ -80,6 +59,8 @@ nav .menu ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px 0;
+    font-size: 20px;
 }
 
 nav .menu ul a{
@@ -105,8 +86,177 @@ nav .menu span.hamber{
     display: none;
 }
 
+/* **************************** Main page accordion style *********************************** */
+article .accordion-wraper{
+    background-color: #ddddddef;
+    padding: 30px 0 50px;
+}
+article .accordion-wraper .animate-header{
+    background-color: #ddddddef;
+    padding: 20px;
+    border-radius: 5px;
 
-/* Footer section */
+}
+.accordion-sction{
+    width: 80%;
+    margin: 20px auto 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.accordion-sction label{
+    cursor: pointer;
+    display: block;
+    padding: 15px 25px;
+    font-size: 16px;
+}
+.accordion-sction label i{
+    float: right;
+}
+.accordion-sction input{
+    display: none;
+}
+.accordion-sction .accor-content{
+    width: 100%;
+    border: 1px solid  #333333;
+    background-color: #fff;
+    box-shadow: 2px 2px 10px -1px rgba(0,0,0,0.2), -1px -1px 10px -1px rgba(255,255,255,.6);
+    border-radius: 5px;
+}
+.accordion-sction .accor-content label{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 25px;
+}
+.accordion-sction .accor-content label span{
+    background-color: #333333;
+    color: #fff;
+    font-size: 40px;
+    padding: 5px;
+    border-radius: 5px;
+}
+.accordion-sction .accor-content input[type=radio]:checked + label + .accor-text{
+    max-height: fit-content;
+    padding: 10px 30px 20px;
+}
+.accordion-sction .accor-content input[type=radio]:checked + label i{
+    rotate: 180deg;
+}
+.accordion-sction .accor-content .accor-text{
+    padding: 0 30px;
+    max-height: 0;
+    border-radius: 0 0 5px 5px;
+    overflow: hidden;
+    transition: max-height 0.8s, padding 0.5s;
+}
+
+/******************************* Journal page styles ***************************/
+nav .journal-menu{
+    justify-content: center;
+}
+article{
+    background-color: #b2b2b2;
+    padding-top: 30px;
+}
+article .introduction{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto 50px;
+    background-color: #f1c50e;
+    padding: 20px 0;
+    border-radius: 5px;
+}
+article .introduction img{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+article .introduction .intro-me{
+    max-width: 500px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+}
+article .introduction .intro-me p{
+    margin-top: 20px;
+}
+article h1{
+    color: #333333;
+    width: 80%;
+    margin: 0 auto;
+}
+article .main-content{
+    margin: 30px auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+article .main-content>div{
+    box-shadow: 1px 1px 10px 3px #e7e7e7;
+    background-color: #fff;
+    padding: 20px;
+    flex: 1 1 10em;
+    border-radius: 5px;
+}
+article .main-content>div>p{
+    font-size: 14px;
+}
+article .main-content>div>a{
+    /* text-decoration: none; */
+    display: block;
+    margin: 10px 0;
+    color: #0a82f3;
+}
+
+article .main-content .improvement span{
+    font-size: 40px;
+    color: #fff;
+    background-color: rgb(0, 153, 255);
+    border-radius: 5px;
+    padding: 5px;
+}
+article .main-content .solutions span{
+    font-size: 40px;
+    color: #fff;
+    background-color: rgb(19, 206, 128);
+    border-radius: 5px;
+    padding: 5px;
+}
+article .main-content .errors span{
+    font-size: 40px;
+    color: #fff;
+    background-color: rgb(199, 5, 5);
+    border-radius: 5px;
+    padding: 5px;
+}
+article .main-content .project span{
+    font-size: 40px;
+    color: #fff;
+    background-color: #f1c50e;
+    border-radius: 5px;
+    padding: 5px;
+}
+article .main-content>div>h2{
+    margin: 20px 0 5px;
+}
+
+/********************************** Lessons page styles ******************************************/
+section .lessons-wraper {
+   
+}
+section .lessons-wraper .lesson {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
+
+/********************************** Footer section ******************************************/
 footer{
     background-color: rgb(9, 9, 45);
     display: flex;
@@ -153,122 +303,21 @@ footer .footer-wraper .foot-address {
     color: #fff;
 }
 footer .copy-right {
-    color: #b2b2b2;
+    color: #f1c50e;
     font-size: 12px;
-}
-
-/******************************* Journal page styles ***************************/
-nav .journal-menu{
-    justify-content: center;
-}
-article{
-    background-color: #b2b2b2;
-    padding: 30px;
-}
-article .introduction{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 80%;
-    margin: 0 auto 50px;
-    background-color: #f1c50e;
-    padding: 20px 0;
-    border-radius: 5px;
-}
-article .introduction img{
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-}
-article .introduction .intro-me{
-    max-width: 500px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-}
-article .introduction .intro-me p{
-    margin-top: 20px;
-}
-article h1{
-    color: #333333;
-    width: 80%;
-    margin: 0 auto;
-}
-article .main-content{
-    width: 80%;
-    margin: 30px auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-}
-article .main-content>div{
-    box-shadow: 1px 1px 10px 3px #e7e7e7;
-    background-color: #fff;
-    padding: 20px;
-    flex: 1 1 10em;
-    border-radius: 5px;
-}
-article .main-content>div>p{
-    font-size: 14px;
-}
-
-article .main-content .improvement span{
-    font-size: 40px;
-    color: #fff;
-    background-color: rgb(0, 153, 255);
-    border-radius: 5px;
-    padding: 5px;
-}
-article .main-content .solutions span{
-    font-size: 40px;
-    color: #fff;
-    background-color: rgb(19, 206, 128);
-    border-radius: 5px;
-    padding: 5px;
-}
-article .main-content .errors span{
-    font-size: 40px;
-    color: #fff;
-    background-color: rgb(199, 5, 5);
-    border-radius: 5px;
-    padding: 5px;
-}
-article .main-content .project span{
-    font-size: 40px;
-    color: #fff;
-    background-color: #f1c50e;
-    border-radius: 5px;
-    padding: 5px;
-}
-article .main-content>div>h2{
-    margin: 20px 0 5px;
-}
-article .ProjectScreen{
-    width: 80%;
-    margin: 0 auto;
-}
-article .ProjectScreen h2{
-    color: #fff;
-    width: fit-content;
-    margin: 40px 0 10px;
-    padding: 5px 10px;
-    border-radius: 5px;
-}
-article .ProjectScreen img{
-    width: 100%;
 }
 
 /******************************* Animations ********************************/
 
 @keyframes rotateIcons {
-    0% {background-color: #000;}
-    25% {background-color: rgb(49, 146, 54);}
-    50% {background-color: rgba(179, 9, 9, 0.719);}
-    100% {background-color: rgb(228, 130, 73);}
+    0% {background-color: #333333;}
+    25% {background-color: #b2b2b2;}
+    50% {background-color: #fff;}
+    100% {background-color: #f1c50e;}
 }
 
-.ProjectScreen h2 {
-    animation: rotateIcons 4s infinite;
+article .accordion-wraper .animate-header {
+    animation: rotateIcons 5s infinite;
 }
 
 /****************************** Media query *******************************/
@@ -286,9 +335,6 @@ article .ProjectScreen img{
     }
 }
 @media screen and (max-width: 768px) {
-    header .top-header .search {
-        display: none;
-    }
     nav .menu {
         align-items: start;
         display: block;
