--- a/main.css
+++ b/main.css
@@ -287,6 +287,24 @@ section .lessons-wraper .lesson .content .content-sample img{
 }    
 
 
+/********************************** Sample project page styles ******************************************/
+section .project-wraper {
+   background-color: #b2b2b2; 
+}
+section .project-wraper .project{
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+section .project-wraper .project .project-content{
+    border: 8px solid #f1c50e;
+    border-radius: 5px;
+    padding: 15px 20px;
+}
+section .project-wraper .project .project-content img{
+    width: 100%;
+}
+
 /********************************** Footer section ******************************************/
 footer{
     background-color: rgb(9, 9, 45);
